# station-service-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  MANIFEST_SCHEMA.md  README.md  __init__.py  base.py  cli.py  context.py  decorators.py  exceptions.py  helpers.py  interactive.py  interfaces.py  loader.py  manual_executor.py  protocol.py  pyproject.toml  requirements-dev.txt  runner.py  sdk_types.py
.claude/skills/sdk-sequence-guide/: SKILL.md
.github/workflows/: publish.yml  test.yml
skills/: SKILL.md
station_service_sdk/: __init__.py  base.py  cli.py  context.py  decorators.py  dependencies.py  driver_registry.py  exceptions.py  interactive.py  interfaces.py  loader.py  manifest.py  manual_executor.py  protocol.py  registry.py  sdk_types.py  simulator.py  validate.py
station_service_sdk/cli/: __init__.py  main.py
station_service_sdk/cli/commands/: debug.py  deps.py  doctor.py  init.py  lint.py  new.py  run.py  validate.py
station_service_sdk/compat/: __init__.py  dependencies.py  legacy_cli.py  sequence_cli.py  types.py
station_service_sdk/core/: __init__.py  base.py  context.py  sdk_types.py  types.py  validators.py
station_service_sdk/execution/: __init__.py  base.py  context.py  dependencies.py  exceptions.py  helpers.py  interactive.py  loader.py  manifest.py  registry.py  simulator.py  types.py
station_service_sdk/hardware/: __init__.py  connection.py  health.py  retry.py
station_service_sdk/observability/: __init__.py  logging.py  metrics.py  tracing.py
station_service_sdk/plugins/: __init__.py  manager.py  protocols.py
station_service_sdk/skills/: SKILL.md
station_service_sdk/testing/: __init__.py  assertions.py  fixtures.py  mocks.py
tests/: __init__.py  conftest.py  test_base.py  test_cli.py  test_context.py  test_exceptions.py  test_execution.py  test_hardware.py  test_manifest.py  test_protocol.py  test_sdk_types.py  test_validators.py
