[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "station-service-sdk"
version = "2.0.0"
description = "SDK for Station Service test sequence development"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["station", "service", "sdk", "test", "sequence"]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"" = "station_service_sdk"
