[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "station-service-sdk"
version = "2.0.0"
description = "SDK for building test sequences for Station Service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "F2X", email = "dev@f2x.com" }
]
keywords = ["testing", "automation", "manufacturing", "sequence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
station-sdk = "station_service_sdk.cli:main"

[project.urls]
Homepage = "https://github.com/F2X/station-service-sdk"
Documentation = "https://github.com/F2X/station-service-sdk#readme"
Repository = "https://github.com/F2X/station-service-sdk"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"" = "station_service_sdk"
